--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "7.10.1",
     "gsap": "^3.14.2",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1"
