--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@react-router/express": "^7.11.0",
-    "@react-router/node": "7.10.1",
-    "@react-router/serve": "7.10.1",
+    "@react-router/node": "^7.11.0",
+    "@react-router/serve": "^7.11.0",
     "compression": "^1.8.1",
     "express": "^5.2.1",
     "gsap": "^3.14.2",
@@ -22,10 +22,10 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.0",
-    "react-router": "7.10.1"
+    "react-router": "^7.11.0"
   },
   "devDependencies": {
-    "@react-router/dev": "7.10.1",
+    "@react-router/dev": "^7.11.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.6",
