--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "npx serve ./build/client",
+    "start": "npx serve -c 0 ./build/client",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
